# rs-lz4cat

./: Cargo.toml  README.md  bench.md  rs-lz4cat  rs-lz4cat.wasm  run.sh
src/: lib.rs  main.rs
